[gd_scene load_steps=29 format=3 uid="uid://fmmu4mi6pvy"]

[ext_resource type="Texture2D" uid="uid://btw4t0i36x5ol" path="res://TEXTURES/tile_texture3082.jpg" id="1_hjn1v"]
[ext_resource type="Script" path="res://SCRIPTS/main_menu.gd" id="1_j31ue"]
[ext_resource type="PackedScene" uid="uid://bvx5rju5w57dv" path="res://ASSETS/STRUCTURES/street_flashlight.tscn" id="2_52bq7"]
[ext_resource type="PackedScene" uid="uid://bflnuei8vg2pe" path="res://ASSETS/STRUCTURES/break_street_flashlight.tscn" id="3_5v37l"]
[ext_resource type="PackedScene" uid="uid://cd4mu0cb5r6s8" path="res://ASSETS/STRUCTURES/factory.tscn" id="3_quun8"]
[ext_resource type="PackedScene" uid="uid://bpr3qhnsq2xma" path="res://ASSETS/STRUCTURES/housev_1.tscn" id="4_bu37e"]
[ext_resource type="PackedScene" uid="uid://nssppw250c7s" path="res://ASSETS/STRUCTURES/housev_2.tscn" id="5_nsu5d"]
[ext_resource type="Texture2D" uid="uid://batp7aae0iu81" path="res://TEXTURES/sky5.jpg" id="6_uqftg"]
[ext_resource type="FontFile" uid="uid://tlktxqtve133" path="res://TTF/DischargePro.ttf" id="6_w7jxa"]
[ext_resource type="PackedScene" uid="uid://bksfpfa52jtm4" path="res://ASSETS/FOR_cutscene/idiot.tscn" id="7_cw11w"]
[ext_resource type="PackedScene" uid="uid://bwp3rjmdy81mk" path="res://ASSETS/STRUCTURES/trashbukket.tscn" id="10_v27tf"]
[ext_resource type="PackedScene" uid="uid://cukc2rwknkwod" path="res://ASSETS/FOR_cutscene/robo_cow_comlate!!!.tscn" id="12_wnaj8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lfaqb"]
size = Vector3(2312.79, 0.199219, 3482.08)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cq5cb"]
albedo_texture = ExtResource("1_hjn1v")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_triplanar = true
uv2_triplanar_sharpness = 3.73213

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dxoad"]
albedo_color = Color(1, 1, 0.694118, 1)
rim_enabled = true
rim = 0.02

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ds2sj"]

[sub_resource type="Theme" id="Theme_jumue"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b5ii0"]
modulate_color = Color(0.701961, 0.701961, 0.701961, 1)

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_3225c"]
rayleigh_color = Color(0.00392157, 0.00392157, 0.0156863, 1)
turbidity = 0.0
ground_color = Color(0.894118, 0.796078, 0.694118, 1)
night_sky = ExtResource("6_uqftg")

[sub_resource type="Sky" id="Sky_umjd7"]
sky_material = SubResource("PhysicalSkyMaterial_3225c")

[sub_resource type="Environment" id="Environment_vwxw4"]
background_mode = 2
background_energy_multiplier = 0.83
sky = SubResource("Sky_umjd7")
ambient_light_source = 2
ambient_light_color = Color(0.490196, 0.490196, 0.490196, 1)
ambient_light_energy = 0.49
tonemap_mode = 2
tonemap_exposure = 0.33
tonemap_white = 3.19
volumetric_fog_enabled = true
volumetric_fog_density = 0.03
volumetric_fog_detail_spread = 0.5
volumetric_fog_temporal_reprojection_amount = 0.944

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_8m4wb"]
dof_blur_far_enabled = true
dof_blur_far_distance = 1.14
dof_blur_far_transition = -1.0
dof_blur_near_enabled = true
dof_blur_near_distance = 0.01
dof_blur_amount = 0.04

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cycu5"]
emission_shape = 3
emission_box_extents = Vector3(200, 50, 200)
scale_min = 0.1
scale_max = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x3byd"]
blend_mode = 1
albedo_color = Color(0.34902, 0.329412, 0.317647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_vjqa1"]
material = SubResource("StandardMaterial3D_x3byd")

[sub_resource type="FogMaterial" id="FogMaterial_etab2"]
density = 0.0792

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t2nd7"]
emission_shape = 1
emission_sphere_radius = 0.7
gravity = Vector3(0, 4, 0)

[sub_resource type="BoxMesh" id="BoxMesh_d1yb5"]

[node name="MAIN_MENU" type="Node3D"]
transform = Transform3D(0.207405, 0, 0, 0, 0.207405, 0, 0, 0, 0.207405, 0, 6.32737, 0)
script = ExtResource("1_j31ue")

[node name="floor" type="Node3D" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 152.202, -0.400391, -23.9131)
shape = SubResource("BoxShape3D_lfaqb")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 356.062, 0, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="floor/CSGCombiner3D"]
transform = Transform3D(24.2295, 0, 0, 0, 24.2295, 0, 0, 0, 24.2295, -205.235, -12.6234, 467.584)
size = Vector3(71.3936, 1, 68.4103)
material = SubResource("StandardMaterial3D_cq5cb")

[node name="objects" type="Node3D" parent="."]

[node name="break_flash_light" parent="objects" instance=ExtResource("3_5v37l")]
transform = Transform3D(0.414614, 0, 0.909997, 0, 0.999999, 0, -0.909997, 0, 0.414614, 130.21, -0.300787, 3.45347)

[node name="street flashlight7" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(0.953018, 0, 3.84148, 0, 3.95793, 0, -3.84148, 0, 0.953018, 130.646, -0.300781, -119.564)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight7"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight7"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight7"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight7"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="street flashlight2" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(0.953018, 0, 3.84148, 0, 3.95793, 0, -3.84148, 0, 0.953018, 130.646, -0.300781, -60.2439)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight2"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight2"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight2"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight2"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="street flashlight3" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(0.953018, 0, 3.84148, 0, 3.95793, 0, -3.84148, 0, 0.953018, 130.646, -0.300781, 90.2475)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight3"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight3"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight3"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight3"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="street flashlight4" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(2.33457, 0, -3.19609, 0, 3.95793, 0, 3.19609, 0, 2.33457, 13.5157, -0.300781, 90.2475)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight4"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight4"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight4"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight4"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="street flashlight5" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(2.33457, 0, -3.19609, 0, 3.95793, 0, 3.19609, 0, 2.33457, 13.5157, -0.300781, 3.16234)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight5"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight5"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight5"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight5"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="street flashlight6" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(2.33457, 0, -3.19609, 0, 3.95793, 0, 3.19609, 0, 2.33457, 13.5157, -0.300781, -58.7879)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight6"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight6"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight6"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight6"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="street flashlight8" parent="objects" instance=ExtResource("2_52bq7")]
transform = Transform3D(2.33457, 0, -3.19609, 0, 3.95793, 0, 3.19609, 0, 2.33457, 13.5157, -0.300781, -113.375)

[node name="SpotLight3D" type="SpotLight3D" parent="objects/street flashlight8"]
transform = Transform3D(1.04107, -0.242152, -0.038115, 0.057366, 0.0789868, 1.06508, -0.238326, -1.03877, 0.0898722, -0.0245476, 9.58236, -1.90985)
light_color = Color(1, 1, 0.8, 1)
light_energy = 16.0
light_indirect_energy = 16.0
light_specular = 0.662
shadow_enabled = true
spot_range = 19.5889
spot_angle = 31.7997

[node name="OmniLight3D" type="OmniLight3D" parent="objects/street flashlight8"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127611, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="OmniLight3D2" type="OmniLight3D" parent="objects/street flashlight8"]
transform = Transform3D(1.06954, 0, 1.49012e-08, 0, 1.06954, 0, -1.49012e-08, 0, 1.06954, 0.127609, 10.4059, -1.85194)
light_color = Color(1, 1, 0.776471, 1)
light_energy = 9.081
omni_range = 6.68409

[node name="MeshInstance3D" type="MeshInstance3D" parent="objects/street flashlight8"]
transform = Transform3D(0.330676, 0, 1.86265e-07, 0, 0.373323, 0, -1.78814e-07, 0, 0.376429, 0.0124187, 10.4108, -1.76028)
material_override = SubResource("StandardMaterial3D_dxoad")
mesh = SubResource("CapsuleMesh_ds2sj")

[node name="trashbukket" parent="objects" instance=ExtResource("10_v27tf")]
transform = Transform3D(1.68029, 0, 0, 0, 1.68029, 0, 0, 0, 1.65169, 108.682, -0.300781, -84.688)

[node name="trashbukket2" parent="objects" instance=ExtResource("10_v27tf")]
transform = Transform3D(1.68029, 0, 0, 0, 1.68029, 0, 0, 0, 1.65169, 39.0304, -0.300781, -17.3564)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.72254, 0.00566801, 0.971755, -0.100391, 4.79276, -0.515837, -0.966572, -0.525484, -4.69429, 106.336, 12.4098, -127.832)
fov = 66.5

[node name="2D" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="2D"]
texture_filter = 2
layout_mode = 2
offset_left = 38.0
offset_top = -40.0
offset_right = 517.0
offset_bottom = 217.0
size_flags_horizontal = 4
theme = SubResource("Theme_jumue")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_w7jxa")
theme_override_font_sizes/font_size = 256
theme_override_styles/normal = SubResource("StyleBoxTexture_b5ii0")
text = "IDIOT"

[node name="VBoxContainer" type="VBoxContainer" parent="2D"]
layout_mode = 0
offset_left = 38.0
offset_top = 269.0
offset_right = 255.0
offset_bottom = 620.0

[node name="Button3" type="Button" parent="2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w7jxa")
theme_override_font_sizes/font_size = 59
text = "LOAD GAME"
flat = true
alignment = 0

[node name="Button" type="Button" parent="2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w7jxa")
theme_override_font_sizes/font_size = 59
text = "NEW GAME"
flat = true
alignment = 0

[node name="Button4" type="Button" parent="2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w7jxa")
theme_override_font_sizes/font_size = 59
text = "SETTINGS"
flat = true
alignment = 0

[node name="Button5" type="Button" parent="2D/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w7jxa")
theme_override_font_sizes/font_size = 59
text = "EXIT"
flat = true
alignment = 0

[node name="graphic" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="graphic"]
transform = Transform3D(-0.944768, 3.62041, -3.04084, 0.938447, 3.18285, 3.49792, 4.63394, 0.0935506, -1.32835, -10.9211, 33.1744, 0)
light_energy = 0.515
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="graphic"]
environment = SubResource("Environment_vwxw4")
camera_attributes = SubResource("CameraAttributesPractical_8m4wb")

[node name="GPUParticles3D" type="GPUParticles3D" parent="graphic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 72.14, 47.8374, 0.0253205)
amount = 500
lifetime = 0.41
speed_scale = 5.52
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_cycu5")
draw_pass_1 = SubResource("BoxMesh_vjqa1")

[node name="FogVolume" type="FogVolume" parent="graphic"]
transform = Transform3D(0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 82.7293, 1.79352, 58.063)
size = Vector3(124.91, 100.203, 221.905)
material = SubResource("FogMaterial_etab2")

[node name="structures" type="Node3D" parent="."]

[node name="factory" parent="structures" instance=ExtResource("3_quun8")]
transform = Transform3D(2.22418, 0, 24.031, 0, 24.1336, 0, -24.031, 0, 2.22418, 68.3575, -0.300781, 303.143)

[node name="GPUParticles3D" type="GPUParticles3D" parent="structures/factory"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -1.67193, 9.75999, 4.89108)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="structures/factory"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.95402, 11.1845, 1.40114)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="GPUParticles3D3" type="GPUParticles3D" parent="structures/factory"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.89358, 8.12209, 4.40857)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="factory2" parent="structures" instance=ExtResource("3_quun8")]
transform = Transform3D(-3.2348, 0, -23.9159, 0, 24.1336, 0, 23.9159, 0, -3.2348, -242.756, -0.300781, 410.153)

[node name="GPUParticles3D" type="GPUParticles3D" parent="structures/factory2"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -1.67193, 9.75999, 4.89108)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="structures/factory2"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.95402, 11.1845, 1.40114)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="GPUParticles3D3" type="GPUParticles3D" parent="structures/factory2"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.89358, 8.12209, 4.40857)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="factory3" parent="structures" instance=ExtResource("3_quun8")]
transform = Transform3D(-1.05492e-06, 0, 24.1337, 0, 24.1336, 0, -24.1337, 0, -1.05492e-06, 317.9, -0.300781, 467.359)

[node name="GPUParticles3D" type="GPUParticles3D" parent="structures/factory3"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -1.67193, 9.75999, 4.89108)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="structures/factory3"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.95402, 11.1845, 1.40114)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="GPUParticles3D3" type="GPUParticles3D" parent="structures/factory3"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 4.89358, 8.12209, 4.40857)
amount = 300
lifetime = 5.3
process_material = SubResource("ParticleProcessMaterial_t2nd7")
draw_pass_1 = SubResource("BoxMesh_d1yb5")

[node name="housev1" parent="structures" instance=ExtResource("4_bu37e")]
transform = Transform3D(1.57314, 0, 7.65423, 0, 7.81422, 0, -7.65423, 0, 1.57314, -76.1661, -0.300781, 15.4948)

[node name="housev2" parent="structures" instance=ExtResource("4_bu37e")]
transform = Transform3D(-1.9387, 0, -7.56991, 0, 7.81422, 0, 7.56991, 0, -1.9387, 222.825, -0.300781, 15.4948)

[node name="housev3" parent="structures" instance=ExtResource("5_nsu5d")]
transform = Transform3D(-7.46434, 0, 4.05905, 0, 8.4966, 0, -4.05905, 0, -7.46434, -55.2405, -0.300781, -85.7019)

[node name="housev4" parent="structures" instance=ExtResource("5_nsu5d")]
transform = Transform3D(8.36545, 0, -1.4871, 0, 8.4966, 0, 1.4871, 0, 8.36545, 186.274, -0.300781, -85.7019)

[node name="charapters" type="Node3D" parent="."]

[node name="idiot" parent="charapters" instance=ExtResource("7_cw11w")]
transform = Transform3D(0.974201, 0, -0.225682, 0, 1, 0, 0.225682, 0, 0.974201, 100.209, -0.300776, -123.059)

[node name="Skeleton3D" parent="charapters/idiot/Armature" index="1"]
bones/4/position = Vector3(0, 154.581, 1.90735e-05)
bones/4/rotation = Quaternion(-0.0717098, 0.0294626, -0.0160974, 0.99686)

[node name="robo_cow_comlate!!!" parent="charapters" instance=ExtResource("12_wnaj8")]
transform = Transform3D(-4.18871, 0, 0.0594394, 0, 4.18914, 0, -0.0594394, 0, -4.18871, 82.3463, 17.2949, 47.4781)

[node name="Skeleton3D" parent="charapters/robo_cow_comlate!!!/Armature" index="0"]
bones/0/position = Vector3(0.261722, 1.779, -5.92549)
bones/0/rotation = Quaternion(-0.680178, -0.271973, 0.255369, 0.631011)
bones/1/rotation = Quaternion(0.25625, 0.0367797, -0.0181961, 0.965739)
bones/2/rotation = Quaternion(0.0993412, 0.0651002, -0.0492298, 0.9917)
bones/3/rotation = Quaternion(0.0993417, 0.0651002, -0.0492297, 0.9917)
bones/4/rotation = Quaternion(-0.239019, -0.00641656, -0.00649015, 0.970972)
bones/5/rotation = Quaternion(-0.0613127, 0.177944, -0.0154468, 0.982007)
bones/11/rotation = Quaternion(0.634575, 0.369959, -0.52363, 0.431575)
bones/12/rotation = Quaternion(0.150049, -0.120583, 0.0941579, 0.97677)
bones/13/rotation = Quaternion(-0.198521, -0.131111, 0.345202, 0.907874)
bones/14/rotation = Quaternion(-0.251817, -0.0799355, -0.0137551, 0.96437)
bones/15/rotation = Quaternion(0.249713, 0.133569, 0.152873, 0.946801)
bones/16/rotation = Quaternion(-0.0877942, 0.00482204, -0.00240546, 0.996124)
bones/19/rotation = Quaternion(0.0827955, -0.0517828, 0.0323562, 0.994694)
bones/20/rotation = Quaternion(0.184393, 0.00477214, -0.00120051, 0.98284)
bones/23/rotation = Quaternion(0.172078, 0.0372294, -0.0410056, 0.983525)
bones/24/rotation = Quaternion(0.226873, -0.00443309, 0.0162971, 0.973778)
bones/27/rotation = Quaternion(0.315774, 0.049549, -0.086726, 0.943563)
bones/28/rotation = Quaternion(0.30602, 0.00201748, 0.0275787, 0.951623)
bones/31/rotation = Quaternion(0.666491, -0.347365, 0.464742, 0.468126)
bones/32/rotation = Quaternion(0.21997, 0.0638294, 0.126347, 0.965182)
bones/33/rotation = Quaternion(-0.115707, 0.175101, -0.293515, 0.932631)
bones/34/rotation = Quaternion(-0.0673793, 0.176088, -0.0687321, 0.979658)
bones/35/rotation = Quaternion(0.251914, -0.0011085, -0.104707, 0.962068)
bones/36/rotation = Quaternion(-0.0298632, -0.056606, 0.159629, 0.9851)
bones/39/rotation = Quaternion(0.153783, 0.0171302, 0.024817, 0.987644)
bones/40/rotation = Quaternion(0.28209, -0.0068499, -0.000783631, 0.959363)
bones/43/rotation = Quaternion(0.216528, 0.0060285, 0.00766978, 0.976228)
bones/44/rotation = Quaternion(0.365568, 0.00414428, -0.0262798, 0.930404)
bones/47/rotation = Quaternion(0.254766, -0.026184, 0.0310724, 0.966149)
bones/48/rotation = Quaternion(0.438647, 0.0042829, -0.0420684, 0.897664)
bones/51/rotation = Quaternion(0.0600457, 0.375581, 0.888876, -0.255408)
bones/52/rotation = Quaternion(-0.544926, -0.123893, 0.00745958, 0.829247)
bones/53/rotation = Quaternion(0.614514, 0.209016, -0.337787, 0.681605)
bones/54/rotation = Quaternion(0.176004, 0.0159824, -0.0163125, 0.984125)
bones/56/rotation = Quaternion(-0.104522, 0.030236, 0.936013, 0.334725)
bones/57/rotation = Quaternion(-0.520039, 0.262226, -0.0106544, 0.812824)
bones/58/rotation = Quaternion(0.745826, -0.0841241, 0.444083, 0.489344)
bones/59/rotation = Quaternion(0.173032, 0.000102131, -0.0121618, 0.984841)

[node name="BoneAttachment3D" parent="charapters/robo_cow_comlate!!!/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.998928, -0.0462474, -0.00191262, 0.0130444, 0.241625, 0.970282, -0.0444108, -0.969267, 0.24197, -0.814923, 4.23206, -11.5282)

[node name="timer" type="Node3D" parent="."]

[node name="robo_cow_timer" type="Timer" parent="timer"]
process_callback = 0
wait_time = 25.0
autostart = true

[connection signal="timeout" from="timer/robo_cow_timer" to="." method="_on_robo_cow_timer_timeout"]

[editable path="objects/break_flash_light"]
[editable path="charapters/idiot"]
[editable path="charapters/robo_cow_comlate!!!"]
